fixed the Nav Bar menu to be compatible on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0px;
   padding: 0px;
+  
 }
 
 html {
@@ -20,43 +21,107 @@ Body {
   background-color: #030303;
 }
 
-/*------------------Header------------------------*/
-.logo-colour {
-    color: #fafafa;
-}
-
-.header {
-  background-color: rgb(165, 156, 108);
+/*----------------------------------------Header/Nav Bar------------------------------------*/
+ 
+nav{
+  display: flex;
+  height: 80px;
   width: 100%;
-  height: 100px;
-  position: fixed;
-  text-align: center;
+  background: rgb(165, 156, 108);
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 50px 0 100px;
+  flex-wrap: wrap;
 }
+nav .logo{
+  color: #fff;
+  font-size: 35px;
+  font-weight: 600;
+}
+nav ul{
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+nav ul li{
+  margin: 0 5px;
 
-.header a {
-    color: rgb(112, 100, 70);
-  text-align: center;
-  padding: 14px 16px;
+}
+nav ul li a{
+  color: rgb(95, 72, 8);
   text-decoration: none;
-  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 15px;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
 }
-
-.header a:hover {
-    color: rgb(95, 72, 8);
+nav ul li a.active,
+nav ul li a:hover{
+  color: rgb(219, 208, 147);
+  background: rgb(165, 156, 108);
 }
-
-.photo {
- height: 100%;
+nav .menu-btn i{
+  color: rgb(95, 72, 8);
+  font-size: 22px;
+  cursor: pointer;
+  display: none;
+}
+input[type="checkbox"]{
+  display: none;
+}
+@media (max-width: 1000px){
+  nav{
+    padding: 0 40px 0 50px;
+  }
+}
+@media (max-width: 920px) {
+  nav .menu-btn i{
+    display: block;
+  }
+  #click:checked ~ .menu-btn i:before{
+    content: "\f00d";
+  }
+  nav ul{
+    position: fixed;
+    top: 80px;
+    left: -100%;
+    background: rgb(219, 208, 147);
+    height: 100vh;
     width: 100%;
-    object-fit: contain;
-   text-align: center;
-   margin-top: 90px;
+    text-align: center;
+    display: block;
+    transition: all 0.3s ease;
+  }
+  #click:checked ~ ul{
+    left: 0;
+  }
+  nav ul li{
+    width: 100%;
+    margin: 40px 0;
+  }
+  nav ul li a{
+    width: 100%;
+    margin-left: -100%;
+    display: block;
+    font-size: 20px;
+    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  #click:checked ~ ul li a{
+    margin-left: 0px;
+  }
+  nav ul li a.active,
+  nav ul li a:hover{
+    background: none;
+    color: #fafafa;
+  }
 }
-
+/*---------------------------------------Body Content-----------------------------------------*/
 
 .heading-colours {
-    color:rgb(201, 191, 137);
-    font-family: "Roboto", sans-serif;
+color:rgb(201, 191, 137);
+font-family: "Roboto", sans-serif;
 }
 
 .band-info {
@@ -104,7 +169,7 @@ Body {
     width: 30px;
 }
 
-/*-----------------Contact Form--------------------*/
+/*------------------------------------------Contact Form---------------------------------------*/
 
 .form-style {
     color:rgb(201, 191, 137);
@@ -149,13 +214,14 @@ margin-left: 40px;
     text-align: center;
  }
 
+ /*------------------------------------------Social Networks/Footer-------------------------------------------*/
+
+ 
 .footer {
   background-color: rgb(168, 159, 112);
   height: 20%;
   width: 100%;
 }
-
-/*------------------Social Networks--------------*/
 
 .social-networks {
    text-align: center;
@@ -163,8 +229,8 @@ margin-left: 40px;
   
  }
 
-.social-networks li:hover {
-     color: rgb(175, 158, 109);
+.social-networks i:hover {
+     color: rgb(201, 191, 137);
 }
 
  .social-networks li {
@@ -177,4 +243,8 @@ margin-left: 40px;
    margin: 1%;
    padding: 5%;
    color:rgb(95, 72, 8);
+ }
+
+ .copyright {
+     color: rgb(95, 72, 8);
  }
